editing input value overflow issue and downgrading primeng version to be compitable with angular 11

--- a/src/app/layout-components/footer/footer.component.scss
+++ b/src/app/layout-components/footer/footer.component.scss
@@ -22,7 +22,8 @@
             background: none;
             border: none;
             outline: none;
-            min-width: 240px
+            max-width: 200px;
+            min-width: 200px;
          
         }
     }
